[package]
name = "ide-ci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
argh = "0.1.6"
async-compression = {version = "0.3.12", features = ["tokio", "gzip"]}
async-trait = "0.1.51"
bytes = "1.0.0"
cached = "0.26.2"
convert_case = "0.5.0"
cfg-if = "1.0.0"
chrono = { version = "0.4.19", features = ["serde"] }
command-group = { version = "1.0.8", features = ["with-tokio"] }
crossbeam = "0.8.1"
data-encoding = "2.3.2"
derivative = "2.2.0"
derive_more = "0.99.17"
dirs = "4.0.0"
filetime = "0.2.15"
flate2 = "1.0.22"
flume = "0.10.10"
fn-error-context = "0.2.0"
fs_extra = "1.2.0"
futures = "0.3.17"
futures-util = "0.3.17"
glob = "0.3.0"
graphql_client = "0.10.0"
ifmt = "0.3.3"
indexmap = "1.7.0"
indicatif = "0.17.0-rc.9"
itertools = "0.10.1"
lazy_static = "1.4.0"
log = "0.4.14"
mime = "0.3.16"
new_mime_guess = "4.0.0"
nix = "0.23.0"
octocrab = { git = "https://github.com/enso-org/octocrab" }
path-absolutize = "3.0.11"
pathdiff = "0.2.1"
path-slash = "0.1.4"
platforms = "2.0.0"
pin-project = "1.0.8"
port_check = "0.1.5"
pretty_env_logger = "0.4.0"
proc-macro2 = "1.0.36"
quote = "1.0.15"
rand = "0.8.4"
regex = "1.5.4"
reqwest = { version = "0.11.5", features = ["stream"] }
snafu = "0.7.0"
semver = { version = "1.0.4", features=["serde"] }
serde = { version = "1.0.130", features= ["derive"]}
serde_json = "1.0.68"
serde_yaml = "0.8.21"
scopeguard = "1.1.0"
sha2 = "0.10.2"
shrinkwraprs = "0.3.0"
strum = { version = "0.23", features = ["derive"] }
syn = "1.0.86"
sysinfo = "0.22.2"
tar = "0.4.37"
tempfile = "3.2.0"
tokio = { version = "1.15.0", features = ["full", "tracing"] }
tokio-util = {version = "0.6.9", features = ["full"] }
tracing = "0.1.32"
tracing-subscriber = "0.3.11"
unicase = "2.6.0"
url = "2.2.2"
uuid = { version = "0.8.2", features= ["v4", "serde"] }
walkdir = "2.3.2"
which = "4.2.2"
wiremock = "0.5.10"
whoami = "1.2.1"
zip = "0.5.13"
